# ShowOnce

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  TESTING_GUIDE.md  pyproject.toml  requirements.txt  setup.py  test_mouse.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  test.yml
docs/: api.md  architecture.md  cli.md
examples/data_extraction/: README.md  generated_script.py  workflow.json
examples/form_submission/: README.md  generated_script.py  workflow.json
examples/login_flow/: README.md  generated_script.py  workflow.json
showonce/: Test Demo.py  __init__.py  cli.py
showonce/analyze/: __init__.py  inference.py  prompts.py  vision.py
showonce/capture/: __init__.py  hotkeys.py  metadata.py  mouse.py  recorder.py  screenshot.py
showonce/generate/: __init__.py  factory.py  playwright_gen.py  pyautogui_gen.py  runner.py  selenium_gen.py
showonce/models/: __init__.py  actions.py  workflow.py
showonce/ui/: __init__.py  app.py
showonce/utils/: __init__.py  logger.py
tests/: __init__.py  test_analyze.py  test_capture.py  test_models.py
workflows/: .gitkeep
